...
    tools:context=".activity.ClickTestActivity">

    <Button
        android:id="@+id/btn_test_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="测试Button点击" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Spinner
...

    <CheckBox
        android:id="@+id/check_box_android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="Android" />

    <CheckBox
        android:id="@+id/check_box_ios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="iOS" />
...
        android:id="@+id/tv_click_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="placeholder" />

    <EditText
        android:id="@+id/test_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="输入框"/>

</LinearLayout>
